@@ -4,6 +4,9 @@ Changelog
 3.0 - Unreleased
 ----------------
 
+- Avoid acquiring `portal_properties` and call it via a proper API.
+  [hannosch]
+
 - Cleaned up package metadata.
   [hannosch]
 
